# jamescraik

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Estrategia_LeadGen_MakingSense.docx  Project_Knowledge_Contexto.md  README.md  Resumen_Ejecutivo_LeadGen.html  pyproject.toml  requirements.txt
.agents/rules/: icp-engine.md
.streamlit/: config.toml
campaigns/: healthtech-product-leaders-us-modernizaci-n-legacy.json
context/: making_sense.md
docs/: claude-code-kickoff.md  icp-engine-spec.md  icp.example.yaml
docs/taxonomies/: department.yaml  funding_stage.yaml  industry.yaml  seniority.yaml
examples/: demo_apollo.py  demo_batch.py  demo_real_icp.py
icp/: pe-backed-legal-services.yaml  pe-operating-partners---tech-value-creation.yaml  tech-enabled-services.yaml
src/icp_engine/: __init__.py
src/icp_engine/adapters/: __init__.py  anthropic_judge.py  apollo.py  base.py  stub.py
src/icp_engine/canonical/: __init__.py  enums.py  models.py
src/icp_engine/feedback/: __init__.py  fit_rate.py  models.py
src/icp_engine/registry/: __init__.py  loader.py  schema.py
src/icp_engine/scoring/: __init__.py  combiner.py  fuzzy.py  pipeline.py  result.py  rules.py
supabase/functions/expandi-webhook/: README.md  index.ts
tests/: conftest.py  test_ai_assist.py  test_anthropic_judge.py  test_apollo_adapter.py  test_auth.py  test_campaigns_chat.py  test_canonical.py  test_context.py  test_enrich.py  test_feedback.py  test_i18n.py  test_icp_editor_io.py  test_leadgen.py  test_leads_store.py  test_message.py  test_ms_ui.py  test_qualify.py  test_registry.py  test_scoring_fuzzy.py  test_scoring_knockouts.py  test_scoring_pipeline.py  test_scoring_rules.py  test_ui_store_translate.py
tests/fixtures/: accounts.py  contacts.py
tests/fixtures/apollo/: people_search.json
tests/fixtures/icps/: invalid_bad_weights.yaml  invalid_missing_meta.yaml  valid_basic.yaml  (+1 more)
ui/: ai_assist.py  app.py  app_legacy.py  campaigns.py  chat_builder.py  context.py  enrich.py  i18n.py  icp_io.py  icp_translate.py  leadgen.py  leads_store.py  message.py  ms_theme.py  ms_ui.py  qualify.py  store.py  streamlit_styles.css  tokens.css
